[gd_scene load_steps=7 format=3 uid="uid://88fawh7t22lb"]

[ext_resource type="Script" path="res://Scripts/UserInterface/inventory.gd" id="1_h4ldh"]
[ext_resource type="PackedScene" uid="uid://de54x6lm0afbt" path="res://Scenes/Items/ui_test_item_1x_1.tscn" id="2_x73k8"]
[ext_resource type="PackedScene" uid="uid://bop1pn1ups3nd" path="res://Scenes/Items/ui_test_item_1x_4.tscn" id="3_fvlml"]
[ext_resource type="PackedScene" uid="uid://dibr447femyft" path="res://Scenes/Items/ui_test_item_2x_2.tscn" id="4_4ew7r"]
[ext_resource type="PackedScene" uid="uid://darkwo262n3sj" path="res://Scenes/Items/ui_test_item_2x_4.tscn" id="5_dhncg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wt1vr"]
size = Vector2(1184, 592)

[node name="Inventory" type="Control"]
custom_minimum_size = Vector2(1152, 576)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -72.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h4ldh")

[node name="BackGround" type="ColorRect" parent="."]
self_modulate = Color(1, 1, 1, 0.490196)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.396889, 0.396889, 0.396889, 1)

[node name="InventoryGrid" type="Sprite2D" parent="."]
region_enabled = true
region_rect = Rect2(1152, 576, 0, 0)

[node name="GridContainer" type="GridContainer" parent="InventoryGrid"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1180.0
offset_bottom = 588.0
grow_horizontal = 2
grow_vertical = 2
columns = 8

[node name="ColorRect" type="ColorRect" parent="InventoryGrid/GridContainer"]
custom_minimum_size = Vector2(144, 144)
layout_mode = 2

[node name="ColorRect2" type="ColorRect" parent="InventoryGrid/GridContainer"]
custom_minimum_size = Vector2(144, 144)
layout_mode = 2

[node name="ColorRect3" type="ColorRect" parent="InventoryGrid/GridContainer"]
custom_minimum_size = Vector2(144, 144)
layout_mode = 2

[node name="ColorRect4" type="ColorRect" parent="InventoryGrid/GridContainer"]
custom_minimum_size = Vector2(144, 144)
layout_mode = 2

[node name="ColorRect5" type="ColorRect" parent="InventoryGrid/GridContainer"]
custom_minimum_size = Vector2(144, 144)
layout_mode = 2

[node name="ColorRect6" type="ColorRect" parent="InventoryGrid/GridContainer"]
custom_minimum_size = Vector2(144, 144)
layout_mode = 2

[node name="ColorRect7" type="ColorRect" parent="InventoryGrid/GridContainer"]
custom_minimum_size = Vector2(144, 144)
layout_mode = 2

[node name="ColorRect8" type="ColorRect" parent="InventoryGrid/GridContainer"]
custom_minimum_size = Vector2(144, 144)
layout_mode = 2

[node name="ColorRect9" type="ColorRect" parent="InventoryGrid/GridContainer"]
custom_minimum_size = Vector2(144, 144)
layout_mode = 2

[node name="ColorRect10" type="ColorRect" parent="InventoryGrid/GridContainer"]
custom_minimum_size = Vector2(144, 144)
layout_mode = 2

[node name="ColorRect11" type="ColorRect" parent="InventoryGrid/GridContainer"]
custom_minimum_size = Vector2(144, 144)
layout_mode = 2

[node name="ColorRect12" type="ColorRect" parent="InventoryGrid/GridContainer"]
custom_minimum_size = Vector2(144, 144)
layout_mode = 2

[node name="ColorRect13" type="ColorRect" parent="InventoryGrid/GridContainer"]
custom_minimum_size = Vector2(144, 144)
layout_mode = 2

[node name="ColorRect14" type="ColorRect" parent="InventoryGrid/GridContainer"]
custom_minimum_size = Vector2(144, 144)
layout_mode = 2

[node name="ColorRect15" type="ColorRect" parent="InventoryGrid/GridContainer"]
custom_minimum_size = Vector2(144, 144)
layout_mode = 2

[node name="ColorRect16" type="ColorRect" parent="InventoryGrid/GridContainer"]
custom_minimum_size = Vector2(144, 144)
layout_mode = 2

[node name="ColorRect17" type="ColorRect" parent="InventoryGrid/GridContainer"]
custom_minimum_size = Vector2(144, 144)
layout_mode = 2

[node name="ColorRect18" type="ColorRect" parent="InventoryGrid/GridContainer"]
custom_minimum_size = Vector2(144, 144)
layout_mode = 2

[node name="ColorRect19" type="ColorRect" parent="InventoryGrid/GridContainer"]
custom_minimum_size = Vector2(144, 144)
layout_mode = 2

[node name="ColorRect20" type="ColorRect" parent="InventoryGrid/GridContainer"]
custom_minimum_size = Vector2(144, 144)
layout_mode = 2

[node name="ColorRect21" type="ColorRect" parent="InventoryGrid/GridContainer"]
custom_minimum_size = Vector2(144, 144)
layout_mode = 2

[node name="ColorRect22" type="ColorRect" parent="InventoryGrid/GridContainer"]
custom_minimum_size = Vector2(144, 144)
layout_mode = 2

[node name="ColorRect23" type="ColorRect" parent="InventoryGrid/GridContainer"]
custom_minimum_size = Vector2(144, 144)
layout_mode = 2

[node name="ColorRect24" type="ColorRect" parent="InventoryGrid/GridContainer"]
custom_minimum_size = Vector2(144, 144)
layout_mode = 2

[node name="ColorRect25" type="ColorRect" parent="InventoryGrid/GridContainer"]
custom_minimum_size = Vector2(144, 144)
layout_mode = 2

[node name="ColorRect26" type="ColorRect" parent="InventoryGrid/GridContainer"]
custom_minimum_size = Vector2(144, 144)
layout_mode = 2

[node name="ColorRect27" type="ColorRect" parent="InventoryGrid/GridContainer"]
custom_minimum_size = Vector2(144, 144)
layout_mode = 2

[node name="ColorRect28" type="ColorRect" parent="InventoryGrid/GridContainer"]
custom_minimum_size = Vector2(144, 144)
layout_mode = 2

[node name="ColorRect29" type="ColorRect" parent="InventoryGrid/GridContainer"]
custom_minimum_size = Vector2(144, 144)
layout_mode = 2

[node name="ColorRect30" type="ColorRect" parent="InventoryGrid/GridContainer"]
custom_minimum_size = Vector2(144, 144)
layout_mode = 2

[node name="ColorRect31" type="ColorRect" parent="InventoryGrid/GridContainer"]
custom_minimum_size = Vector2(144, 144)
layout_mode = 2

[node name="ColorRect32" type="ColorRect" parent="InventoryGrid/GridContainer"]
custom_minimum_size = Vector2(144, 144)
layout_mode = 2

[node name="InventoryArea" type="Area2D" parent="InventoryGrid"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InventoryGrid/InventoryArea"]
position = Vector2(592, 296)
shape = SubResource("RectangleShape2D_wt1vr")

[node name="UITestItem1x1(size=sprite_size)" parent="." instance=ExtResource("2_x73k8")]
layout_mode = 1
offset_left = 8.0
offset_top = -152.0
offset_right = -1000.0
offset_bottom = -584.0

[node name="UITestItem1x4(size=sprite_size)" parent="." instance=ExtResource("3_fvlml")]
layout_mode = 1
offset_left = 160.0
offset_top = -152.0
offset_right = -416.0
offset_bottom = -584.0

[node name="UITestItem2x2(size=sprite_size)" parent="." instance=ExtResource("4_4ew7r")]
layout_mode = 1
offset_left = 744.0
offset_top = -296.0
offset_right = -120.0
offset_bottom = -584.0

[node name="UITestItem2x4(size=sprite_size)" parent="." instance=ExtResource("5_dhncg")]
layout_mode = 1
offset_left = 1036.0
offset_top = -576.0
offset_right = 172.0
offset_bottom = -576.0
